# dummy-wxbot

./: .env.example  .gitignore  LICENSE.md  README.md  pyproject.toml
src/: sender.py  util.py  webhook.py
src/plugins/: deepseek.py  glot_io.py
src/prompts/: 猫娘.txt  雌小鬼守则.txt  默认.txt
test/: test.py
