[project]
name = "dummy-wxbot"
version = "0.1.0"
description = "WeChat automation using webhook + ADB."
authors = [
    { name = "Vincent-the-gamer" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
