[project]
name = "dummy-wxbot"
version = "0.1.0"
description = "WeChat automation using webhook + ADB."
authors = [
    { name = "Vincent-the-gamer" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "requests (>=2.32.5,<3.0.0)",
]
